@@ -1,3 +1,9 @@
+2009-04-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
+	Reformatting and documentation work in store module.
+
+	* libopenvas/store.c: Reformatting, doc.
+
 2009-03-31  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
 	Disabled checking for non-printable chars when posting security
